ngo-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-ngo-service
  name: app-ngo-service
  namespace: ngo-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-ngo-service
  template:
    metadata:
      labels:
        app: app-ngo-service
    spec:
      containers:
        - name: app-ngo-service
          image: 051688400625.dkr.ecr.us-east-1.amazonaws.com/solidarytech_ngo-service:8988e7df17c1e54e6a935fd872f340d355dabe3b
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /health
              port: 8081
            failureThreshold: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
