ngo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ngo-service
  namespace: ngo-service
spec:
  selector:
    app: app-ngo-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
